--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="es">
     <meta charset="UTF-8">
     <title></title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
 </head>
 <body ng-app="requisitos_aulas" ng-controller="controllerTitulaciones as titu">
@@ -12,57 +12,51 @@
         <div class="col-md-12 column" >
             <div class="row clearfix">
                 <div class="col-md-4 column">
-                </div>
-                <div class="col-md-8 column">
-                    <div class="btn-group" id="lista_titu">
-                        <button class="btn btn-default" type="button" ng-repeat="titulacion in titu.lista" ng-click="titu.showTitu(titulacion)" >
-                            {{titulacion.acro}}
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="row clearfix">
-                <div class="col-md-4 column">
-                    <div>
-                        <accordion close-others="oneAtATime">
+                    <div id="MenuRecursos">
+                        <accordion close-others="oneAtATime" >
                             <accordion-group is-open="status.open" ng-repeat="recurso in titu.listaRecursos" ng-click="titu.showListaRecursos(recurso)">
                                 <accordion-heading>
                                     {{recurso.tipo}} <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
                                 </accordion-heading>
-                                <button class="btn btn-default" type="button" ng-repeat="tipoRecurso in recurso.recursos">
+                                <button ng-drag="true" ng-drag-data="tipoRecurso" class="btn btn-default" type="button" ng-repeat="tipoRecurso in recurso.recursos">
                                     {{tipoRecurso.descripcion}}
                                 </button>
                             </accordion-group>
                         </accordion>
+
                     </div>
                 </div>
                 <div class="col-md-8 column">
-                    <div class="list-group">
-                        <a href="#" class="list-group-item active">Home</a>
-                        <div class="list-group-item">
-                            List header
-                        </div>
-                        <div class="list-group-item">
-                            <h4 class="list-group-item-heading">
-                                List group item heading
-                            </h4>
-                            <p class="list-group-item-text">
-                                ...
-                            </p>
-                        </div>
-                        <div class="list-group-item">
-                            <span class="badge">14</span>Help
-                        </div> <a class="list-group-item active"><span class="badge">14</span>Help</a>
+                    <div>    
+                      <tabset type="pills">
+                        <tab ng-repeat="titulacion in titu.lista" heading="{{titulacion.acro}}" active="tab.active" disabled="tab.disabled">
+                          <accordion close-others="oneAtATime" >
+                            <accordion-group is-open="status.open" ng-repeat="curso in titulacion.cursos">
+                                <accordion-heading>
+                                    {{curso.nombre}} <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+                                </accordion-heading>
+                                <div class="well well-lg"  ng-repeat="asignatura in curso.asignaturas" ng-drop="true">
+                                    {{asignatura.nombre}}
+                                </div> 
+                                
+                            </accordion-group>
+                        </accordion>
+                        </tab>
+                      </tabset>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <div ng-drop="true" ng-drop-success="onDropComplete($data,$event)">
+                                Drop
+                                </div>
+
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-
+<script src="js/ngDraggable.js"></script>
 <script src="js/ui-bootstrap-tpls-0.12.1.min.js"></script>
 <script src="js/app.js"></script>
 </body>
