--- a/index.html
+++ b/index.html
@@ -7,37 +7,78 @@
     <link href="css/app.css" rel="stylesheet">
 </head>
 <body ng-app="requisitos_aulas" ng-controller="controllerTitulaciones as titu">
-
     <div class="row clearfix">
         <div class="col-md-12 column" >
             <div class="row clearfix">
                 <div class="col-md-4 column">
                     <div id="MenuRecursos">
+                        <h5> Recursos Específicos </h5>
                         <accordion close-others="oneAtATime" >
-                            <accordion-group is-open="status.open" ng-repeat="recurso in titu.listaRecursos" ng-click="titu.showListaRecursos(recurso)">
+                            <accordion-group  is-open="status.open" ng-repeat="recurso in titu.listaRecursos" ng-click="titu.showListaRecursos(recurso)">
+                                <div class ="trashcan"dnd-list="[]">
                                 <accordion-heading>
                                     {{recurso.tipo}} <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
                                 </accordion-heading>
-                                <div class="btn btn-default" ng-drag="true" ng-drag-data="tipoRecurso" ng-repeat="tipoRecurso in recurso.recursos"> {{tipoRecurso.descripcion}} </div>
+
+
+                                    <div class="btn btn-default" ng-repeat="tipoRecurso in recurso.recursos"
+                                         dnd-draggable="tipoRecurso"
+                                         dnd-effect-allowed="copy"
+                                         dnd-selected="models.selected = tipoRecurso">
+                                        {{tipoRecurso.descripcion}}
+                                    </div>
+                                </div>
                             </accordion-group>
                         </accordion>
 
                     </div>
                 </div>
                 <div class="col-md-8 column">
-                    <div>    
+                    <div>
                       <tabset type="pills">
                         <tab ng-repeat="titulacion in titu.lista" heading="{{titulacion.acro}}" active="tab.active" disabled="tab.disabled">
-                          <accordion close-others="oneAtATime" >
+                          <accordion id="accordionCustom" close-others="oneAtATime" >
                             <accordion-group is-open="status.open" ng-repeat="curso in titulacion.cursos">
                                 <accordion-heading>
                                     {{curso.nombre}} <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
                                 </accordion-heading>
-                                <div class="well well-lg"  ng-repeat="asignatura in curso.asignaturas" ng-drop="true" ng-drop-success="onDropComplete1($data,$event)">
-                                    {{asignatura.nombre}}
-                                    <div class="btn btn-default" ng-repeat="obj in droppedObjects1" ng-drag="false" ng-drag-data="obj" ng-drag-success="onDragSuccess1($data,$event)" ng-center-anchor="{{centerAnchor}}">
-                                        {{obj.descripcion}}
-                                    </div>
+                                <div  ng-repeat="asignatura in curso.asignaturas">
+                                        <table class="table table-bordered">
+                                                <thead>
+                                                <tr>
+                                                    <th class="tablaNombreAsignatura">{{asignatura.nombre}}</th>
+                                                    <th>Recurso</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr>
+                                                    <td>Teoría</td>
+                                                    <td dnd-list="asignatura.recursosTeoria">
+                                                        <div class="btn btn-default" ng-repeat="tipoRecurso in asignatura.recursosTeoria"
+                                                             dnd-draggable="tipoRecurso"
+                                                             dnd-effect-allowed="move"
+                                                             dnd-moved="asignatura.recursosTeoria.splice($index, 1)"
+                                                             dnd-selected="models.selected = tipoRecurso">
+                                                            {{tipoRecurso.descripcion}}
+                                                        </div>
+                                                    </td>
+
+                                                </tr>
+                                                <tr>
+                                                    <td>Prácticas de Ordenador</td>
+                                                    <td dnd-list="asignatura.recursosPract">
+                                                        <div class="btn btn-default" ng-repeat="tipoRecurso in asignatura.recursosPract"
+                                                             dnd-draggable="tipoRecurso"
+                                                             dnd-effect-allowed="move"
+                                                             dnd-moved="asignatura.recursosPract.splice($index, 1)"
+                                                             dnd-selected="models.selected = tipoRecurso">
+                                                            {{tipoRecurso.descripcion}}
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                                </tbody>
+
+                                        </table>
                                 </div>
 
                             </accordion-group>
@@ -52,8 +93,10 @@
 
 
 
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-<script src="js/ngDraggable.js"></script>
+<script src="js/angular-drag-and-drop-lists.min.js"></script>
 <script src="js/ui-bootstrap-tpls-0.12.1.min.js"></script>
 <script src="js/app.js"></script>
 </body>
