--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="col-md-12 column" >
             <div class="row clearfix">
                 <div class="col-md-4 column">
-                    <div id="MenuRecursos">
+                    <div sticky offset="105" id="MenuRecursos">
                         <h5> Recursos Específicos </h5>
                         <accordion close-others="oneAtATime" >
                             <accordion-group  is-open="status.open" ng-repeat="recurso in titu.listaRecursos" ng-click="titu.showListaRecursos(recurso)">
@@ -51,31 +51,20 @@
                                                 </tr>
                                                 </thead>
                                                 <tbody>
-                                                <tr>
-                                                    <td>Teoría</td>
-                                                    <td dnd-list="asignatura.recursosTeoria">
-                                                        <div class="btn btn-default" ng-repeat="tipoRecurso in asignatura.recursosTeoria"
+                                                <tr ng-repeat="actividad in asignatura.actividades">
+                                                    <td>{{actividad.ACTIVIDAD | capitalize}}</td>
+                                                    <td dnd-list="actividad.lista">
+                                                        <div class="btn btn-default" ng-repeat="tipoRecurso in actividad.lista"
                                                              dnd-draggable="tipoRecurso"
                                                              dnd-effect-allowed="move"
-                                                             dnd-moved="asignatura.recursosTeoria.splice($index, 1)"
+                                                             dnd-moved="actividad.lista.splice($index, 1)"
                                                              dnd-selected="models.selected = tipoRecurso">
                                                             {{tipoRecurso.descripcion}}
                                                         </div>
                                                     </td>
 
                                                 </tr>
-                                                <tr>
-                                                    <td>Prácticas de Ordenador</td>
-                                                    <td dnd-list="asignatura.recursosPract">
-                                                        <div class="btn btn-default" ng-repeat="tipoRecurso in asignatura.recursosPract"
-                                                             dnd-draggable="tipoRecurso"
-                                                             dnd-effect-allowed="move"
-                                                             dnd-moved="asignatura.recursosPract.splice($index, 1)"
-                                                             dnd-selected="models.selected = tipoRecurso">
-                                                            {{tipoRecurso.descripcion}}
-                                                        </div>
-                                                    </td>
-                                                </tr>
+
                                                 </tbody>
 
                                         </table>
@@ -98,6 +87,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 <script src="js/angular-drag-and-drop-lists.min.js"></script>
 <script src="js/ui-bootstrap-tpls-0.12.1.min.js"></script>
+<script src="js/sticky.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
